--- a/style.css
+++ b/style.css
@@ -41,10 +41,14 @@ body {
   }
 }
 
-@media screen and (max-width: 28.125em) {
+@media screen and (max-width: 34.375em) {
   .header-container {
     display: flex;
     flex-direction: column;
+  }
+
+  .header-link {
+    text-align: center;
   }
 }
 
@@ -126,7 +130,7 @@ form {
   }
 }
 
-@media screen and (max-width: 25em) {
+@media screen and (max-width: 32.25em) {
   .player-buttons-container {
     display: flex;
     flex-direction: column;
