added hover effect on the game options

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body {
 }
 
 .score-update p {
-  /* font-size: 2rem; */
   font-weight: 600;
 }
 
@@ -65,7 +64,6 @@ form {
 .computer {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  /* padding: 1.5rem; */
   border: 2px dashed blue;
   text-align: center;
 }
@@ -111,8 +109,6 @@ form {
   background-color: azure;
   border-radius: 1.7rem;
   text-align: center;
-  /* padding-left: 1rem;
-  padding-right: 1rem; */
   padding: 1.5rem;
 }
 
@@ -122,6 +118,10 @@ form {
 
 .player-button h2 {
   font-size: 1.6rem;
+}
+
+.player-button:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 46.875em) {
