--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   }
 }
 
-form {
+.game-container {
   width: 70%;
   margin: 0 auto;
   background-color: rgba(163, 228, 12, 0.918);
@@ -107,6 +107,7 @@ form {
 
 .player-button {
   background-color: azure;
+  border: none;
   border-radius: 1.7rem;
   text-align: center;
   padding: 1.5rem;
@@ -125,7 +126,7 @@ form {
 }
 
 @media screen and (max-width: 46.875em) {
-  form {
+  .game-container {
     width: 100%;
   }
 }
